Grant access to table index for bulk import